# snipvault

./: .gitignore  CLAUDE.md  LICENSE  README.md  gen-icon.cjs  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: generate-icons.cjs
scripts/src-tauri/icons/: icon.icns
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate-icons.cjs  icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  paths.rs  settings.rs  webdav.rs
src/components/: Dialog.tsx  Settings.tsx  Sidebar.tsx  SnippetEditor.tsx  SnippetList.tsx  Titlebar.tsx  Toolbar.tsx
src/context/: LanguageContext.tsx
src/hooks/: useSettings.ts  useSnippets.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/types/: index.ts
src/utils/: languages.ts
