[package]
name = "snipvault"
version = "2.0.3"
description = "灵藏 SnipVault - A local code snippet manager"
authors = ["浅语"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
once_cell = "1"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
sys-locale = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
